--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,79 @@ footer{
 .inputbox{
     width: 20vw;
 }
-#loginwrap {
+.loginwrap {
     background-color: lightskyblue;
     font-size: 2vw;
+}
+
+.loginwrap {
+    background-color: #fafafa;
+    border-bottom: 1px solid #ebebeb;
+    height: 7vw;
+    position: inherit;
+    width: 100%;
+    min-width: 1100px;
+    background: lightskyblue; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(white, skyblue); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(white, skyblue); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(white, skyblue); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(white, skyblue); /* Standard syntax (must be last) */
+}
+#loginlink .a  {
+    text-align: right;
+}
+/*Background Image Style*/
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+.image-container:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 55%;
+    bottom: 0;
+    background: -webkit-linear-gradient(transparent, #FFF) left repeat;
+    background: linear-gradient(transparent, #FFF) left repeat;
+}
+/* ==========================================================================
+   Button classes
+   ========================================================================== */
+.button {
+    border-radius: 4px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+.button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.button:hover span {
+    padding-right: 25px;
+}
+
+.button:hover span:after {
+    opacity: 1;
+    right: 0;
 }
