I added files and removed some but these should be in working form

--- a/css/main.css
+++ b/css/main.css
@@ -256,7 +256,7 @@ footer{
 }
 
 .loginwrap {
-    background-color: #fafafa;
+    /*background-color: #2e00fa;*/
     border-bottom: 1px solid #ebebeb;
     height: 7vw;
     position: inherit;
@@ -283,46 +283,92 @@ footer{
     width: 100%;
     height: 55%;
     bottom: 0;
-    background: -webkit-linear-gradient(transparent, #FFF) left repeat;
-    background: linear-gradient(transparent, #FFF) left repeat;
+    /*background: -webkit-linear-gradient(transparent, #FFF) left repeat;
+    background: linear-gradient(transparent, #FFF) left repeat;*/
 }
 /* ==========================================================================
    Button classes
    ========================================================================== */
 .button {
-    border-radius: 4px;
-    background-color: #f4511e;
-    border: none;
+    border-radius: 2vw;
+    background-color: #e50000;
+    border:1vw solid white;
     color: #FFFFFF;
     text-align: center;
-    font-size: 28px;
-    padding: 20px;
-    width: 200px;
-    transition: all 0.5s;
+    /*NewCode
+    -webkit-transition-duration: 0.4s; /* Safari
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    NewCode*/
+    font-size: 2vw;
+    padding: 2vw;
+    width: 11vw;
+    transition: all 0.7s;
     cursor: pointer;
-    margin: 5px;
+    margin: 3vw;
 }
-
+/*NewCode
+.button:after {
+    content: "";
+    background: #90EE90;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+.button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+}
+/*NewCode*/
 .button span {
     cursor: pointer;
     display: inline-block;
     position: relative;
-    transition: 0.5s;
+    transition: 0.9s;
 }
 .button span:after {
-    content: '\00bb';
+    content: '\272F';
     position: absolute;
     opacity: 0;
     top: 0;
-    right: -20px;
-    transition: 0.5s;
+    right: -30px;
+    transition: 0.9s;
 }
 
 .button:hover span {
-    padding-right: 25px;
+    padding-right: 0;
 }
 
 .button:hover span:after {
     opacity: 1;
-    right: 0;
+    right:3vw;
+}
+/* ==========================================================================
+   LoginWrap classes
+   ========================================================================== */
+.loginwrap{
+    border-radius: 4px;
+    background-color: #e50000;
+    border: none;
+    color: #FFFFFF;
+}
+/* ==========================================================================
+   Bottom-Wrapper Class
+   ========================================================================== */
+.bottom-wrapper{
+    align-content: center;
+    font-size: 5vw;
+    text-align: center;
+
+}
+legend{
+    font-size: 6vw;
 }
